# fakturoid

./: Cargo.toml  README.md
src/: client.rs  error.rs  filters.rs  lib.rs  models.rs
