[package]
name = "fakturoid"
version = "0.1.0"
authors = ["Josef Rokos <pepa@bukova.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.10.9", features = ["json"] }
