[package]
name = "fakturoid"
version = "0.1.1"
authors = ["Josef Rokos <pepa@bukova.info>"]
edition = "2018"
description = "Client library for fakturoid.cz"
readme = "README.md"
repository = "https://github.com/PepaRokos/fakturoid"
license-file = "LICENSE"
keywords = ["fakturoid", "API_client"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.10.9", features = ["json"] }
rust_decimal = { version = "1.8.1", features = ["serde"] }
tree_magic = "0.2.3"
base64 = "0.13.0"

[dev-dependencies]
tokio = {version = "0.2", features = ["full"]}
